<resources>
    <string name="app_name">Unscramble By R</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_fragment_base">This is Game Fragment</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="enter_your_world">Enter your world</string>
    <string name="skip">SKIP</string>
    <string name="submit">SUBMIT</string>
    <string name="words_count">%d of %d words</string>
    <string name="scrambled_word">SCRAMBLED</string>
    <string name="score">Score: %d</string>
    <string name="try_again">Try again!</string>
</resources>